--- a/Web/homepage/styles.css
+++ b/Web/homepage/styles.css
@@ -33,11 +33,14 @@ body {
 }
 
 #section {
+  height: 70vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 #section a {
+  width: 90vw;
   font-size: large;
   text-decoration: none;
   padding: 8px;
@@ -46,20 +49,19 @@ body {
   margin-bottom: 9px;
 }
 
-#section a.reason1:hover,
-#section a.reason2:hover,
-#section a.reason3:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+#section2 {
+  height: 70vh;
+  align-items: center;
+  text-align: center;
 }
 
-#section a.reason1 {
-  background-color: #008000;
+
+#section2 h2 {
+  font-family: sans-serif, Roboto;
+  font-weight: bold;
 }
 
-#section a.reason2 {
-  background-color: #121212;
-}
-
-#section a.reason3 {
-  background-color: #DAA520;
+#section2 p {
+  font-family: sans-serif, Roboto;
+  font-size: 16px;
 }
